@@ -1,3 +1,7 @@
+2000-04-12  Alan Modra  <alan@linuxcare.com.au>
+
+	* ld-selective/selective.exp (test4): Delete incorrect foo__1B test.
+
 2000-03-13  Nick Clifton  <nickc@cygnus.com>
 
 	* ld-scripts/phdrs.t: Discard all unexpected sections.
